# tether

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: ci.yml
controller/: index.html  package-lock.json  package.json  tsconfig.json
controller/src/: chunks.test.ts  chunks.ts  clipboard.test.ts  clipboard.ts  connection.ts  decode.test.ts  decode.ts  gestures.test.ts  gestures.ts  input.test.ts  input.ts  keyboard.ts  main.test.ts  main.ts  pairing.test.ts  pairing.ts  protocol.test.ts  protocol.ts  session.test.ts  session.ts  signaling.test.ts  signaling.ts  viewer.ts  webrtc.ts  zoom.test.ts
crates/tether-protocol/: Cargo.toml
crates/tether-protocol/src/: lib.rs
crates/tether-signal/: Cargo.toml
crates/tether-signal/src/: lib.rs  main.rs  protocol.rs  server.rs  turn.rs
crates/tether-signal/tests/: relay.rs
crates/tetherd/: Cargo.toml
crates/tetherd/examples/: capture_diag.rs  capture_smoke.rs  h264_smoke.rs  inject_diag.rs  inject_smoke.rs  inject_typing.rs
crates/tetherd/src/: adaptive.rs  auth.rs  capture.rs  clipboard.rs  config.rs  encode.rs  input.rs  lib.rs  main.rs  pipeline.rs  server.rs  session.rs  webrtc.rs
crates/tetherd/src/capture/: macos.rs
crates/tetherd/src/clipboard/: macos.rs
crates/tetherd/src/encode/: h264.rs
crates/tetherd/src/input/: macos.rs
crates/tetherd/src/input/macos/: keymap.rs
crates/tetherd/tests/: connection.rs  e2e_fake.rs  webrtc_e2e.rs
docs/: architecture.md  deferred.md  phase1-gate-results.md  phase1-plan.md  phase2-gate-results.md  phase2-plan.md  phase3-gate-results.md  phase3-plan.md  phase4-gate-results.md  phase4-plan.md  phase5-gate-results.md  phase5-plan.md  phase5b-gate-results.md  phase5b-plan.md  protocol.md
