[package]
name = "tether-signal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures-util = "0.3.32"
hmac = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.10"
subtle = "2.6"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
