[package]
name = "tetherd"
description = "Tether host daemon: screen capture, input injection, frame streaming"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
bytes.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
core-graphics = { version = "0.25.0", features = ["highsierra"] }
futures-util = "0.3.32"
screencapturekit = "7.0.1"
tether-protocol.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
turbojpeg = "1.4.0"
